2008-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_rc_style_parse),
	(clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters),
	(clearlooks_style_init_from_rc), (clearlooks_style_draw_focus),
	(clearlooks_style_copy):
	* engines/clearlooks/src/clearlooks_style.h:
	* schema/clearlooks.xml.in.in:
	Added a disable_focus option for documentation purpose.

2008-10-06  Thomas Wood  <thos@gnome.org>

	* engines/mist/src/mist-style.c: (mist_style_draw_focus),
	(mist_style_class_init): Style the focus indicator in Mist

2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Version bump to 2.17.0.

2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c:
	Add the new icon view detail strings to the torture tester.

2008-09-27  Denis Washington  <denisw@svn.gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	Customize drawing of the selection rectangles around GtkIconView
	items introduced in GTK+ trunk. (Bug #553575)


2008-09-22  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.16.0.

2008-09-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_spinbutton):
	Made the horizontal line in the spinbutton smaller.

2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease version bump to 2.15.5.

2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.15.4.

2008-09-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c: