@@ -1,3 +1,9 @@
+2008-10-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_style.c
+	(clearlooks_style_draw_box):
+	Let's return when detail is buttondefault, should fix #555890.
+
 2008-10-07  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_rc_style.c:
